--- a/src/main/webapp/resources/inward/bht.xhtml
+++ b/src/main/webapp/resources/inward/bht.xhtml
@@ -67,7 +67,7 @@
                             <div >
 
                                 <h1 class="ml-5">
-                                    <h:outputText  value="#{cc.attrs.admission.department.name}"/>
+                                    <h:outputText  value="#{cc.attrs.admission.department.printingName}"/>
                                 </h1>
                                 <h2>
                                     <h:outputText value="#{cc.attrs.admission.department.address}"/>
@@ -84,7 +84,7 @@
                         </div>
 
                         <div class="my-4" style="font-weight: bold;text-align: center">
-                            <p:outputLabel value="INDOOR PATIENT DEPARTMENT" />
+                            <p:outputLabel value="ADMISSIONS" />
                         </div>
 
                         <div class="row d-flex justify-content-center ">
