Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/inward/admission_profile.xhtml
+++ b/src/main/webapp/inward/admission_profile.xhtml
@@ -35,7 +35,7 @@
                             </p:commandButton>
                             <p:commandButton 
                                 rendered="#{not admissionController.current.discharged and not admissionController.current.paymentFinalized}" 
-                                action="#{bhtSummeryController.navigateToIntrimBill()}"
+                                action="#{bhtSummeryController.navigateToIntrimBillFromPatientProfile()}"
                                 value="Interim Bill" 
                                 icon="fa fa-file">
                                 <f:setPropertyActionListener 
