--- a/src/main/webapp/emr/opd_visit_view.xhtml
+++ b/src/main/webapp/emr/opd_visit_view.xhtml
@@ -37,7 +37,7 @@
                                         <h:panelGroup >
                                             <p:graphicImage style="border: 1px solid red; width: 150px;" id="photos" cache="false" 
                                                             rendered="#{viewEncounterController.encounter.patient.baImage ne null}"    
-                                                            value="#{patientController.getPhotoByByte(viewEncounterController.encounter.patient.baImage)}"  />
+                                                            value="#{patientController.getPhoto(viewEncounterController.encounter.patient.baImage)}"  />
 
 
                                         </h:panelGroup>
