--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -112,6 +112,12 @@
                                                  class="w-100"
                                                  styleClass="mx-2">
                                 </p:commandButton>
+                                <p:commandButton value="Collecting Center Billing" 
+                                                 action="#{patientController.navigateToCollectingCenterBillingFromPatientProfile()}" 
+                                                 ajax="false"
+                                                 class="w-100"
+                                                 styleClass="mx-2">
+                                </p:commandButton>
                                 <p:commandButton value="OPD Bill for Cashier"
                                                  class="w-100"
                                                  action="#{patientController.navigateToOpdBillFromOpdPatient()}" ajax="false" styleClass="mx-2">
